# forseti

./: .gitignore  Cargo.toml  README.md  convert-to-object-params.ts  package-lock.json  package.json
src/: bindings.ts  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: generator.rs  lib.rs  main.rs
src-tauri/src/database/: helpers.rs  mod.rs  structs.rs
src/backend/: config.rs  generator.rs  mod.rs
src/backend/database/: mod.rs  structs.rs
src/database/: helpers.rs  mod.rs
src/lib/: bindings.ts
src/lib/components/ui/button/: button.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/test/: +page.svelte
src/ui/: mod.rs
src/ui/components/: entry.rs  mod.rs
src/ui/main/: generator.rs  mod.rs
