[package]
name = "forseti"
version = "0.1.0"
description = "Modern, secure and native password manager."
authors = ["valerie <valerie@ouppy.gay>"]
edition = "2024"

[lib]
name = "forseti_lib"

[dependencies]
iced = "0.14.0"
rand = "0.9.2"
time = { version = "0.3.45", features = ["local-offset", "macros", "parsing"] }
blake3 = "1.8.3"
lz4_flex = "0.12.0"
flate2 = { version = "1.1.8", features = ["zlib-rs"], default-features = false }
argon2 = "0.5.3"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
zeroize = { version = "1.8.2", features = ["derive"] }
serde = "1.0.228"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
