cargo-features = ["profile-rustflags"]

[package]
name = "forseti"
version = "0.1.0"
description = "A Tauri App"
authors = ["valerie <valerie@ouppy.gay>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "forseti_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


rand = "0.9.2"
time = { version = "0.3.45", features = ["local-offset", "macros", "parsing"] }
blake3 = "1.8.3"
lz4_flex = "0.12.0"
flate2 = { version = "1.1.8", features = ["zlib-rs"], default-features = false }
argon2 = "0.5.3"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"

tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.22"
specta-typescript = "=0.0.9"

[profile.dev]
incremental = true # Compile your binary in smaller steps.
rustflags = ["-Zthreads=8"] # Better compile performance.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
rustflags = ["-Cdebuginfo=0", "-Zthreads=12"] # Better compile performance.
